<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f9dbae"
    android:orientation="vertical"
    tools:context=".GroceryListActivity">

    <!-- List of buttons -->
    <LinearLayout
        android:id="@+id/navButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:padding="6dp" >
        <Button
            android:id="@+id/addItemBtn"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:text="@string/add_item"/>
        <Button
            android:id="@+id/historyBtn"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:text="@string/history"/>
        <Button
            android:id="@+id/sortBtn"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:text="@string/sort"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_above="@id/navButtons"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:paddingLeft="16dp"
            android:paddingBottom="8dp"
            android:text="@string/listName"
            android:textColor="#034"
            android:textSize="20dp"/>

        <FrameLayout
            android:id="@+id/frameList"
            android:layout_width="match_parent"
            android:layout_height="fill_parent" >

            <!-- List of items -->
            <ListView
                android:id="@+id/groceryList"
                android:background="#fceed9"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:paddingTop="4dp" >

            </ListView>

            <TextView
                android:id="@+id/empty_list_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/empty_list"
                android:layout_gravity="center"
                android:visibility="invisible"/>
        </FrameLayout>
    </LinearLayout>

</RelativeLayout>
