<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0099cc"
    android:padding="6dp"
    tools:context=".AddItemActivity">

    <LinearLayout
        android:id="@+id/itemLayout"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">
        <TextView
            android:id="@+id/nameTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:textSize="20dp"
            android:text="@string/nameTxt"/>
        <EditText
            android:id="@+id/nameInput"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords"
            android:textSize="16dp" />
        <TextView
            android:id="@+id/quantityTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:textSize="20dp"
            android:text="@string/quantityTxt"/>
        <EditText
            android:id="@+id/quantityInput"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:textSize="16dp"
            android:text="1"/>
        <TextView
            android:id="@+id/fromTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:textSize="20dp"
            android:text="@string/fromTxt"/>
        <EditText
            android:id="@+id/fromInput"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords"
            android:textSize="16dp" />
    </LinearLayout>

    <!-- List of buttons -->
    <LinearLayout
        android:id="@+id/navButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true">
        <Button
            android:id="@+id/saveBtn"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:text="@string/save"
            android:enabled="false"/>
        <Button
            android:id="@+id/cancelBtn"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:text="@string/cancel"/>
    </LinearLayout>

</RelativeLayout>
